--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 <!--BEGIN CUSTOM STYLES-->
 <style>
     .custom-home-content {
-        background-color: #155974;
+        /* background-color: #155974; */
         color: white;
         padding: 20px;
         border-radius: 8px;
@@ -31,6 +31,14 @@
         color: #fff;
         font-size: 1.1em;
     }
+
+    .profile-pic {
+        display: block;
+        margin: 20px auto;
+        max-width: 200px;
+        border-radius: 50%;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
 </style>
 <!--END CUSTOM STYLES-->
 
@@ -45,6 +53,18 @@
         Hello and welcome to my website! My name is Dana Lockwood, and I am a programmer and avid technology enthusiast. 
         While I primarily specialize in implementing a variety of elegant solutions using Python 3 and PostgreSQL, 
         I also have a background in multiple different languages and technologies, such as C#/.NET Core, HTML, CSS, and more.
+    </p>
+    <div style="text-align:center; margin: 5px 0;">
+        <img src="/pics/me-profile.jpg" class="profile-pic" alt="Dana Lockwood Profile Photo">
+    </div>
+  </section>
+
+  <section class="about-text">
+    <p>
+        I am an enthusiastic, outgoing person who is also delighted to share ideas and collaborate with creative people to produce great things. 
+        Some of my other personal interests and hobbies include a deep interest in theoretical physics and cosmology, international studies, 
+        traveling, craft brewing, and much more! At any rate, I hope that you have enjoyed my website. 
+        The contact me directly, feel free to head over to the contact page. For more information on my work and skills, please see the links below.
     </p>
   </section>
 
