--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,13 +42,16 @@
 
     .link-list{
         list-style-type: none;
+        text-align: center;
         display: flex;
         flex-direction: row;
-        padding: 0;
     }
 
     .link-list li {
         margin-right: 15px;
+        text-align: center;
+        padding-right: 1em;
+        /* display: inline; */
     }
 </style>
 <!--END CUSTOM STYLES-->
