Added border to profile pic

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,6 +37,7 @@
         max-width: 200px;
         border-radius: 50%;
         box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        border: 0.25em solid #338ac4;
     }
 
     .link-list{
